--- a/client/style/style.css
+++ b/client/style/style.css
@@ -43,9 +43,9 @@ input::placeholder {
 }
 
 #app {
-    min-width: 50px;
-    width: 60%;
-    height: 80%;
+    min-width: 400px;
+    width: 1440px;
+    height: 945px;
     display: flex;
     gap: 0px;
     display: flex;
@@ -57,10 +57,10 @@ input::placeholder {
 }
 
 #chat-container {
-    min-width: 50px;
+    min-width: 200px;
     display: flex;
-    height: 80vh;
-    width: 93%;
+    height: 945px;
+    width: 1440px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
@@ -72,14 +72,14 @@ input::placeholder {
 }
 
 #chat-div {
-    min-width: 30px;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 80vh;
-    width: 72%;
-    justify-content: center;
+    height: 945px;
+    width: 958px;
+    justify-content: flex-start;
     align-items: center;
     margin: 0 auto;
 }
@@ -90,43 +90,45 @@ input::placeholder {
     align-items: flex-start;
     justify-content: flex-start;
     overflow-y: scroll;
-    width: 96%;
-    height: 80%;
+    min-width: 200px;
+    width: 917px;
+    height: 756px;
     gap: 30px;
 
 
+
 }
 
-/* #chat-display::-webkit-scrollbar-button{
-    background-color: yellow;
-    
+ #chat-display::-webkit-scrollbar {
+background-color: #242526;
 }
-#chat-display::-webkit-scrollbar-corner{
-    background-color: yellow;
-}#chat-display::-webkit-scrollbar-track{
-    background-color: yellow;
-} */
-#chat-display::-webkit-scrollbar {
-    background-color: yellow;
+/*
+#chat-display::-webkit-scrollbar-button {
+    max-height: 50%;
+    height: 50%;
+    background-color: #0064c7;
     width: 5px;
-}
 
-#chat-header {
-    width: 96%;
-    height: 12%;
+} */
+
+ #chat-header {
+    width: 919px;
+    min-width: 200px;
+    height: 114px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .chat-header-name {
-    min-width: 50%;
-    height: 52%;
+    min-width: 100px;
+    width: 460px;
+    height: 58px;
 }
 
 #menu-btn {
-    width: 30%;
-    height: 100%;
+    width: 42px;
+    height: 60px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -146,8 +148,9 @@ input::placeholder {
 }
 
 .chat-header-functions {
-    width: 30%;
-    height: 52%;
+    min-width: 100px;
+    width: 276px;
+    height: 59px;
     display: flex;
     justify-content: flex-end;
 }
@@ -164,12 +167,14 @@ input::placeholder {
 }
 
 .app-chat-input {
-    width: 100%;
-    height: 8%;
+    min-width: 200px;
+    width: 958px;
+    height: 75px;
 
     form {
-        width: 96%;
-        height: 60%;
+        min-width: 200px;
+        width: 940px;
+        height: 45px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -179,18 +184,20 @@ input::placeholder {
     }
 
     input {
-        width: 92%;
-        height: 100%;
+        min-width: 200px;
+        width: 900px;
+        height: 45px;
         text-align: start;
         background-color: #404848;
         border: none;
         outline: none;
         color: white;
         border-radius: 7px;
-        padding: 5px;
     }
 
     button {
+        width: 32px;
+        height: 25px;
         background-color: #404848;
         border: none;
 
@@ -203,16 +210,18 @@ input::placeholder {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh;
-    width: 29%;
+    min-width: 200px;
+    height: 945px;
+    width: 385px;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
 }
 
 .contact-chat-div {
-    width: 100%;
-    height: 10%;
+    min-width: 100px;
+    width: 359px;
+    height: 83px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -220,8 +229,8 @@ input::placeholder {
     border-radius: 18px;
 
     img {
-        min-width: 5px;
-        min-height: 5px;
+        min-width: 20px;
+        min-height: 20px;
         width: 64px;
         height: 64px;
         margin-left: 5px;
@@ -246,17 +255,18 @@ input::placeholder {
 }
 
 .contact-chat-names {
-    width: 65%;
+    width: 234px;
+    min-width: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 62%;
+    height: 51px;
 }
 
 .contact-chat-time {
-    height: 62%;
-    width: 10%;
+    height: 51px;
+    width: 36px;
     margin-right: 1%;
     display: flex;
     flex-direction: column;
@@ -273,9 +283,9 @@ input::placeholder {
 }
 
 #contacts-container-input-div {
-
-    width: 88%;
-    height: 52%;
+    min-width: 200px;
+    width: 336px;
+    height: 57px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -286,8 +296,8 @@ input::placeholder {
 
 
     input {
-        height: 90%;
-        width: 65%;
+        height: 51px;
+        width: 218px;
         background-color: #404848;
         border: none;
         text-decoration: none;
@@ -299,8 +309,9 @@ input::placeholder {
 }
 
 .input-container {
-    width: 100%;
-    height: 12%;
+    min-width: 200px;
+    width: 384px;
+    height: 114px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -311,8 +322,9 @@ input::placeholder {
 
 
 #contacts-container-display {
-    width: 94%;
-    height: 90%;
+    min-width: 200px;
+    width: 359px;
+    height: 833px;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -321,16 +333,17 @@ input::placeholder {
 #side-panel {
     display: flex;
     flex-direction: column;
-    width: 7%;
-    height: 80vh;
+    min-width: 50px;
+    width: 101px;
+    height: 945px;
     align-items: center;
     margin: 0 auto;
 }
 
 .logo-div {
-
-    width: 100%;
-    height: 12%;
+    min-width: 50px;
+    width: 100px;
+    height: 113px;
     display: flex;
     align-items: start;
     justify-content: center;
@@ -338,26 +351,33 @@ input::placeholder {
 }
 
 #logo {
-    margin: 18%;
+    min-width: 20px;
+    margin: 18px;
     width: 48px;
     height: 48px;
 }
 
 .account-div {
-    width: 100%;
-    height: 76%;
+    min-width: 50px;
+    width: 100px;
+    height: 718px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .settings-div {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 12%;
+    min-width: 50px;
+    width: 100px;
+    height: 113px;
 }
 
 .side-panel-btn {
-    width: 100%;
+    width: 80px;
     height: 50px;
     display: flex;
     flex-direction: column;
@@ -380,10 +400,11 @@ input::placeholder {
 
 
 #account-btn {
-    margin-top: 40%;
+    margin-top: 40px;
 }
 
 #search-img {
+    min-width: fit-content;
     width: 32px;
     height: 32px;
 }
@@ -400,24 +421,24 @@ input::placeholder {
 }
 
 .voice-message {
-    width: 42%;
-    min-width: 20%;
+    width: 345px;
+    min-width: 75px;
 }
 
 .message-text-div {
     display: flex;
     flex-direction: column;
-    width: 90%;
-    /* word-break: break-all; */
+    min-width: 120px;
+    min-height: 52px;
+
     overflow-wrap: break-word;
-    /* white-space: pre-wrap; */
-    /* hyphens: auto; */
+
 
 }
 
 .message-time-div {
-    width: 10%;
-    height: 100%;
+    width: 38px;
+    height: 72px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -445,7 +466,7 @@ input::placeholder {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 100%;
+    width: 268px;
 }
 
 .voice-play-btn {
@@ -676,5 +697,49 @@ input::placeholder {
 
     .message-text {
         font-size: 14px;
+    }
+
+    .app-chat-input {
+        width: 100%;
+        height: 5%;
+
+        form {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #404848;
+            border-radius: 7px;
+
+        }
+
+        input {
+            width: 100%;
+            height: 100%;
+            text-align: start;
+            background-color: #404848;
+            border: none;
+            outline: none;
+            color: white;
+            border-radius: 7px;
+        }
+
+        button {
+            width: 32px;
+            height: 25px;
+            background-color: #404848;
+            border: none;
+
+
+        }
+    }
+
+    #chat-header {
+        width: 98%;
+        height: 10%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 }
