--- a/client/style/style.css
+++ b/client/style/style.css
@@ -51,7 +51,6 @@ input::placeholder {
 .root {
     width: 100vw;
     min-height: 100vh;
-    /* background-color: #698CB8; */
     position: fixed;
     z-index: 2;
 }
@@ -73,7 +72,6 @@ input::placeholder {
     left: 0;
     width: 100vw;
     height: 100vh;
-    /* z-index: 1; */
 }
 
 
@@ -100,9 +98,6 @@ input::placeholder {
     align-items: center;
     margin: 0 auto;
     background-color: aliceblue;
-
-
-
     border-radius: 20px;
 
 
@@ -139,15 +134,6 @@ input::placeholder {
 #chat-display::-webkit-scrollbar {
     background-color: aliceblue;
 }
-
-/*
-#chat-display::-webkit-scrollbar-button {
-    max-height: 50%;
-    height: 50%;
-    background-color: #0064c7;
-    width: 5px;
-
-} */
 
 #chat-header {
     width: 1057px;
@@ -235,8 +221,6 @@ input::placeholder {
         width: 900px;
         height: 45px;
         text-align: start;
-
-        /* border-radius: 7px; */
     }
 
     button {
@@ -415,8 +399,8 @@ input::placeholder {
 .progress {
     height: 100%;
     background-color: #0582ca;
-    width: 30%;
-    /* будет меняться через JS */
+    width: 0%;
+
 }
 
 .duration {
@@ -424,26 +408,6 @@ input::placeholder {
     color: #666;
     margin-left: 8px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* audio */
@@ -460,14 +424,11 @@ input::placeholder {
     border-radius: 12px;
     display: flex;
     border-bottom: 2px solid #c2c3c3;
-    
+
     align-items: center;
 }
 
-.voice-message {
-    width: 345px;
-    min-width: 75px;
-}
+
 
 .message-text-div {
     display: flex;
@@ -507,45 +468,7 @@ input::placeholder {
 
 }
 
-.message-length {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 268px;
-}
 
-.voice-play-btn {
-    min-width: 20px;
-    min-height: 20px;
-    width: 38px;
-    height: 38px;
-    border-radius: 50%;
-    border: none;
-    background-color: #0582ca;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.voice-img {
-    width: 28px;
-    ;
-    height: inherit;
-    min-width: 15px;
-}
-
-
-.voice-length-div {
-    width: 80%;
-    height: 38px;
-    max-height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2px;
-
-}
 
 #voice-message-back {
     display: none;
@@ -564,7 +487,7 @@ input::placeholder {
     position: relative;
     width: 12%;
     height: 24%;
-    background-color: aliceblueq;
+    background-color: aliceblue;
     border-radius: 7px;
     left: calc(50% - 6%);
     top: calc(50% - 12%);
@@ -578,9 +501,6 @@ input::placeholder {
     top: calc(50% - 85px);
     background-color: #698CB8;
     border-radius: 50%;
-
-
-
 
 }
 
@@ -705,23 +625,10 @@ input::placeholder {
     }
 
     #voice-message-window {
-        position: relative;
         width: 42%;
         height: 24%;
-        background-color: #0582ca;
-        border-radius: 7px;
         left: calc(50% - 21%);
         top: calc(50% - 12%);
-    }
-
-    .voice-message {
-        min-width: 80%;
-    }
-
-    .voice-length-div {
-        width: 70%;
-        margin-left: 5px;
-
     }
 
     .message-name {
@@ -731,6 +638,10 @@ input::placeholder {
 
     .message-text {
         font-size: 14px;
+    }
+
+    .chat-header-functions {
+        height: 100%;
     }
 
     .app-chat-input {
@@ -770,10 +681,19 @@ input::placeholder {
     }
 
     #chat-header {
-        width: 98%;
-        height: 10%;
+        width: 100%;
+        height: 100px;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        /* justify-content: flex-start; */
+        align-items: flex-start;
+
+    }
+
+    #voice-message-back {
+
+        background-color:#0582ca94;
+        backdrop-filter: blur(5px);
+        z-index: 1;
+
     }
 }
